Resize image attempt

--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -23,7 +23,7 @@ So I wanted to take a year off and cross some things off that list. For now, I h
 
 # Overall Goals
 
-As might be obvious from the above paragraph, my high-level goal is to have the largest possible positive impact with my life. I think I'm willing to make fairly large sacrifices to my income in order to be able to do that. On a given year, I typically donate at least 10% of my income to high-impact non-profits (something [everyone should consider doing!](https://www.givingwhatwecan.org/pledge?gad_source=1&gclid=CjwKCAjwjeuyBhBuEiwAJ3vuoWKZn3GqnsqBRA5RoO60BV7yORYOfnXUD0-A4t5aSklkaq7sUVZ7_hoCiEcQAvD_BwE)).
+As might be obvious from the above paragraph, my high-level goal is to have the largest possible positive impact with my life. I think I'm willing to make fairly large sacrifices to my income in order to be able to do that. On a given year, I typically donate at least 10\% of my income to high-impact non-profits (something [everyone should consider doing!](https://www.givingwhatwecan.org/pledge?gad_source=1&gclid=CjwKCAjwjeuyBhBuEiwAJ3vuoWKZn3GqnsqBRA5RoO60BV7yORYOfnXUD0-A4t5aSklkaq7sUVZ7_hoCiEcQAvD_BwE)).
 
 On a more specific level, I'm interested in what I call "[algorithmic governance](https://en.wikipedia.org/wiki/Government_by_algorithm)". That is, the usage of computer algorithms applied to policy decisions. With the current buzz around AI (both the hype and actual advancements), governments will increasingly defer to algorithmic processes to automate and improve decision-making. If done correctly, this has the potential to make everyone better off through more responsive, evidence-based, and unbiased policies and programming. If done incorrectly, the opposite may come to pass.
 
@@ -49,7 +49,7 @@ Feels pretty good to see a project through start to finish in such a short amoun
 
 I've also been working on a [neural network-based housing price simulator](https://jess-rapson.com/prediction/2024/01/10/infc-housing.html) for Infrastructure Canada. This month I finished scraping the bulk of the necessary housing market data from CMHC's really non-download friendly and Javascript-heavy [Housing Market Information Portal](https://www03.cmhc-schl.gc.ca/hmip-pimh/en#Profile/1/1/Canada). I also finished coding the multi-headed transformer mechanism underlying the simulator, which was fun. (My first time implementing a transformer!) This month, I presented everything that's been done so far to the Data and Analytics Directorate of Infrastructure Canada.
 
-![no-alignment]({{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }})
+![no-alignment]({{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }}){: .small-image }
 *My untested hypothesis is that there is a positive correlation between giving a model a cute name and its probability of being used.*
 
 Finally, I've been working with the Bihar branch of [Digital Green](https://digitalgreen.org/) to do some follow-up work for a machine learning-based [precision agriculture model](https://jess-rapson.com/prediction/2023/12/10/digital-green-agriculture.html) my team developed in December. Basically, we our model detected a pretty strong relationship between root-based (as opposed to broadcasting) organic fertiliser application and higher crop yields. I did some quasi-experimental analysis (propensity score matching) to confirm this relationship had a causal basis using 2022 data supplied by Digital Green. Now, my team is actively working with Digital Green and the [Bihar Rural Livelihoods Promotion Society](https://brlps.in/) to verify this relationship on 2023 data. Once that's done, I'm hoping to get a publication out of it and hopefully enable these organisations to give recommendations to subsistence farmers that can increase their crop yields!
@@ -69,9 +69,8 @@ A pretty neat experience, once you wade through the more flashy and buzz-wordy g
 ![no-alignment]({{ '/assets/images/updates/2024-may/itu3.png' | absolute_url }})
 *I really hope in future years they focus more on impact and less on flashy shows.*
 
-itu4.png
-
-Plenty of microphones but no opportunities for asking questions or discussion on the ground floor.
+![no-alignment]({{ '/assets/images/updates/2024-may/itu4.png' | absolute_url }})
+*Plenty of microphones but no opportunities for asking questions or discussion on the ground floor.*
 
 
 # Graduating from Oxford
@@ -98,7 +97,7 @@ I've aged again. Not much else to say here, except that time seems to run faster
 
 # Reading
 
-I'm stealing this section from [jablevine.com](https://jablevine.com/now/). He reads a ton and has inspired me to read more (though I'll probably never quite be on his level.) This month I've been continuing to read *Africa's Development in Historical Perspective*; basically a collection of essays b9y economists, sociologists, and other social scientists trying to explain specific aspects of African developmental challenges, with an eye to the historical context underlying said challenges. I'm about two thirds of the way done (working my way through one section every day). So far I'm a huge fan on the analysis of the impact of malaria on African development by David N. Weil. Basically he argues that malaria was way less important to limiting development historically than it is today, using a variety of interesting demographic, epidemiological, and econometric techniques. 
+I'm stealing this section from [jablevine.com](https://jablevine.com/now/). He reads a ton and has inspired me to read more (though I'll probably never quite be on his level.) This month I've been continuing to read *Africa's Development in Historical Perspective*; basically a collection of essays by economists, sociologists, and other social scientists trying to explain specific aspects of African developmental challenges, with an eye to the historical context underlying said challenges. I'm about two thirds of the way done (working my way through one section every day). So far I'm a huge fan on the analysis of the impact of malaria on African development by David N. Weil. Basically he argues that malaria was way less important to limiting development historically than it is today, using a variety of interesting demographic, epidemiological, and econometric techniques. 
 
 
 # Learning
