--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -49,7 +49,7 @@ Feels pretty good to see a project through start to finish in such a short amoun
 
 I've also been working on a [neural network-based housing price simulator](https://jess-rapson.com/prediction/2024/01/10/infc-housing.html) for Infrastructure Canada. This month I finished scraping the bulk of the necessary housing market data from CMHC's really non-download friendly and Javascript-heavy [Housing Market Information Portal](https://www03.cmhc-schl.gc.ca/hmip-pimh/en#Profile/1/1/Canada). I also finished coding the multi-headed transformer mechanism underlying the simulator, which was fun. (My first time implementing a transformer!) This month, I presented everything that's been done so far to the Data and Analytics Directorate of Infrastructure Canada.
 
-![no-alignment]({{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }}){: .small-image }
+<img src="{{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *My untested hypothesis is that there is a positive correlation between giving a model a cute name and its probability of being used.*
 
 Finally, I've been working with the Bihar branch of [Digital Green](https://digitalgreen.org/) to do some follow-up work for a machine learning-based [precision agriculture model](https://jess-rapson.com/prediction/2023/12/10/digital-green-agriculture.html) my team developed in December. Basically, we our model detected a pretty strong relationship between root-based (as opposed to broadcasting) organic fertiliser application and higher crop yields. I did some quasi-experimental analysis (propensity score matching) to confirm this relationship had a causal basis using 2022 data supplied by Digital Green. Now, my team is actively working with Digital Green and the [Bihar Rural Livelihoods Promotion Society](https://brlps.in/) to verify this relationship on 2023 data. Once that's done, I'm hoping to get a publication out of it and hopefully enable these organisations to give recommendations to subsistence farmers that can increase their crop yields!
