--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -78,7 +78,7 @@ A pretty neat experience, once you wade through the more flashy and buzz-wordy g
 
 I did a thing! I'm not really one for pomp and circumstance, which is basically what the University of Oxford graduation ceremony is. That's pretty much what you can expect from a 700+ year old tradition. 
 
-![no-alignment]({{ '/assets/images/updates/2024-may/grad1.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/grad1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *I've removed the watermark and upscaled the potato-quality sample photo using AI, so if it looks weird that's why.*
 
 ![no-alignment]({{ '/assets/images/updates/2024-may/grad2.png' | absolute_url }})
@@ -89,10 +89,10 @@ I did a thing! I'm not really one for pomp and circumstance, which is basically 
 
 I've aged again. Not much else to say here, except that time seems to run faster the more years you've been alive. It feels like years 22-26 just slipped past. I know going back to read this post when I'm actually old (like over 30, ugh) I'll shake my head at my younger self for feeling old at 27. But right now, I just feel disturbed that time can slip by so fast.
 
-![no-alignment]({{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *27-year-old me.*
 
-![no-alignment]({{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *More smooth but still one year older.*
 
 
@@ -117,19 +117,22 @@ may-day.MOV
 
 Spring is here and quite beautiful in Oxford and especially the Botanic Gardens. 
 
-![no-alignment]({{ '/assets/images/updates/2024-may/jade-vine.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/jade-vine.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *The jade vine, quite possibly the most unique flower I have ever seen.*
 
-![no-alignment]({{ '/assets/images/updates/2024-may/old-fashioned-weigela.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/old-fashioned-weigela.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
 *Old fashioned weigela, also pretty neat.*
 
 I also got to see the northern lights, as did a large portion of the UK. 
 
-![no-alignment]({{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
+*Shockingly visible with the naked eye.*
 
-![no-alignment]({{ '/assets/images/updates/2024-may/aurora2.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
+*The lights here are way more blurry and ill-defined than further up North.*
 
-![no-alignment]({{ '/assets/images/updates/2024-may/aurora3.png' | absolute_url }})
+<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
+*The perfect Instagram picture, if I had Instagram.*
 
 
 # Last Words
