--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -49,8 +49,7 @@ Feels pretty good to see a project through start to finish in such a short amoun
 
 I've also been working on a [neural network-based housing price simulator](https://jess-rapson.com/prediction/2024/01/10/infc-housing.html) for Infrastructure Canada. This month I finished scraping the bulk of the necessary housing market data from CMHC's really non-download friendly and Javascript-heavy [Housing Market Information Portal](https://www03.cmhc-schl.gc.ca/hmip-pimh/en#Profile/1/1/Canada). I also finished coding the multi-headed transformer mechanism underlying the simulator, which was fun. (My first time implementing a transformer!) This month, I presented everything that's been done so far to the Data and Analytics Directorate of Infrastructure Canada.
 
-<img src="{{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }})
 *My untested hypothesis is that there is a positive correlation between giving a model a cute name and its probability of being used.*
 
 Finally, I've been working with the Bihar branch of [Digital Green](https://digitalgreen.org/) to do some follow-up work for a machine learning-based [precision agriculture model](https://jess-rapson.com/prediction/2023/12/10/digital-green-agriculture.html) my team developed in December. Basically, we our model detected a pretty strong relationship between root-based (as opposed to broadcasting) organic fertiliser application and higher crop yields. I did some quasi-experimental analysis (propensity score matching) to confirm this relationship had a causal basis using 2022 data supplied by Digital Green. Now, my team is actively working with Digital Green and the [Bihar Rural Livelihoods Promotion Society](https://brlps.in/) to verify this relationship on 2023 data. Once that's done, I'm hoping to get a publication out of it and hopefully enable these organisations to give recommendations to subsistence farmers that can increase their crop yields!
@@ -58,12 +57,10 @@ Finally, I've been working with the Bihar branch of [Digital Green](https://digi
 To end the month, I got to attend the ITU AI for Good Global Conference, hosted by the UN in Geneva. 
 
 itu1.MOV
-
-Of course Boston Dynamics was there.
+*Of course Boston Dynamics was there.*
 
 itu2.MOV
-
-The more flashy side of the conference. I'm pretty sure this doesn't have any relationship to achieving SDGs, but it looks cool. (Credit to [The Robot Studio](https://www.therobotstudio.com/))
+*The more flashy side of the conference. I'm pretty sure this doesn't have any relationship to achieving SDGs, but it looks cool. (Credit to [The Robot Studio](https://www.therobotstudio.com/))*
 
 A pretty neat experience, once you wade through the more flashy and buzz-wordy ground floor (and like, hundreds of pictures of the thinking robot head thing that seems to have become the stock image for "AI"). Geoffrey Hinton spoke, as did Sam Altman. I definitely preferred sitting in on the technical workshops on the top floor though. The opportunity to ask questions to and get ideas from some of the top scientists in the world leading efforts to implement AI for good was definitely worth the trip! (I even managed to impress a few scientists with the questions I asked.)
 
@@ -78,8 +75,7 @@ A pretty neat experience, once you wade through the more flashy and buzz-wordy g
 
 I did a thing! I'm not really one for pomp and circumstance, which is basically what the University of Oxford graduation ceremony is. That's pretty much what you can expect from a 700+ year old tradition. 
 
-<img src="{{ '/assets/images/updates/2024-may/grad1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/grad1.png' | absolute_url }})
 *I've removed the watermark and upscaled the potato-quality sample photo using AI, so if it looks weird that's why.*
 
 ![no-alignment]({{ '/assets/images/updates/2024-may/grad2.png' | absolute_url }})
@@ -90,12 +86,10 @@ I did a thing! I'm not really one for pomp and circumstance, which is basically 
 
 I've aged again. Not much else to say here, except that time seems to run faster the more years you've been alive. It feels like years 22-26 just slipped past. I know going back to read this post when I'm actually old (like over 30, ugh) I'll shake my head at my younger self for feeling old at 27. But right now, I just feel disturbed that time can slip by so fast.
 
-<img src="{{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }})
 *27-year-old me.*
 
-<img src="{{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }})
 *More smooth but still one year older.*
 
 
@@ -120,26 +114,21 @@ may-day.MOV
 
 Spring is here and quite beautiful in Oxford and especially the Botanic Gardens. 
 
-<img src="{{ '/assets/images/updates/2024-may/jade-vine.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/jade-vine.png' | absolute_url }})
 *The jade vine, quite possibly the most unique flower I have ever seen.*
 
-<img src="{{ '/assets/images/updates/2024-may/old-fashioned-weigela.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/old-fashioned-weigela.png' | absolute_url }})
 *Old fashioned weigela, also pretty neat.*
 
 I also got to see the northern lights, as did a large portion of the UK. 
 
-<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }})
 *Shockingly visible with the naked eye.*
 
-<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/aurora2.png' | absolute_url }})
 *The lights here are way more blurry and ill-defined than further up North.*
 
-<img src="{{ '/assets/images/updates/2024-may/aurora1.png' | absolute_url }}" alt="no-alignment" style="width: 300px;">
-
+![no-alignment]({{ '/assets/images/updates/2024-may/aurora3.png' | absolute_url }})
 *The perfect Instagram picture, if I had Instagram.*
 
 
