--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -86,10 +86,10 @@ I did a thing! I'm not really one for pomp and circumstance, which is basically 
 
 I've aged again. Not much else to say here, except that time seems to run faster the more years you've been alive. It feels like years 22-26 just slipped past. I know going back to read this post when I'm actually old (like over 30, ugh) I'll shake my head at my younger self for feeling old at 27. But right now, I just feel disturbed that time can slip by so fast.
 
-![no-alignment]({{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }})
+![no-alignment]({{ '/assets/images/updates/2024-may/birthday1.png' | absolute_url }})\
 *27-year-old me.*
 
-![no-alignment]({{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }})
+![no-alignment]({{ '/assets/images/updates/2024-may/birthday2.png' | absolute_url }})\
 *More smooth but still one year older.*
 
 
