--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -139,3 +139,5 @@ Writing down all of that has made me feel slightly more accomplished for the mon
 Of course, I don't want to confuse doing a lot of things with having an impact. Tracking that separately remains important. 
 
 I will (hopefully) be back next month with new updates!
+
+<iframe width="420" height="315" src="https://www.youtube.com/embed/BZP1rYjoBgI?si=rpkSf1w1buDPsiB8" frameborder="0" allowfullscreen></iframe>
