Added vimeo embeds

--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -56,10 +56,10 @@ Finally, I've been working with the Bihar branch of [Digital Green](https://digi
 
 To end the month, I got to attend the ITU AI for Good Global Conference, hosted by the UN in Geneva. 
 
-itu1.MOV
+<iframe width="420" height="315" src="https://player.vimeo.com/video/953332133" frameborder="0" allowfullscreen></iframe>
 *Of course Boston Dynamics was there.*
 
-itu2.MOV
+<iframe width="420" height="315" src="https://player.vimeo.com/video/953332148" frameborder="0" allowfullscreen></iframe>
 *The more flashy side of the conference. I'm pretty sure this doesn't have any relationship to achieving SDGs, but it looks cool. (Credit to [The Robot Studio](https://www.therobotstudio.com/))*
 
 A pretty neat experience, once you wade through the more flashy and buzz-wordy ground floor (and like, hundreds of pictures of the thinking robot head thing that seems to have become the stock image for "AI"). Geoffrey Hinton spoke, as did Sam Altman. I definitely preferred sitting in on the technical workshops on the top floor though. The opportunity to ask questions to and get ideas from some of the top scientists in the world leading efforts to implement AI for good was definitely worth the trip! (I even managed to impress a few scientists with the questions I asked.)
@@ -109,7 +109,7 @@ I'm also learning Mandarin! As an old person, spaced repetition is pretty much w
 
 I kicked off the month with the uniquely-Oxford May Day celebrations: staying up all night and heading over to heard the Magdalen Choir sing from the top of the tower at 6AM. I missed this last year since I was back in Canada, and was glad I got to experience it. Very weird experience staying up all night with an entire town!
 
-may-day.MOV
+<iframe width="420" height="315" src="https://player.vimeo.com/video/953332160" frameborder="0" allowfullscreen></iframe>
 *You can't see the choir but I'm sure they're up there somewhere.*
 
 Spring is here and quite beautiful in Oxford and especially the Botanic Gardens. 
@@ -139,5 +139,3 @@ Writing down all of that has made me feel slightly more accomplished for the mon
 Of course, I don't want to confuse doing a lot of things with having an impact. Tracking that separately remains important. 
 
 I will (hopefully) be back next month with new updates!
-
-<iframe width="420" height="315" src="https://www.youtube.com/embed/BZP1rYjoBgI?si=rpkSf1w1buDPsiB8" frameborder="0" allowfullscreen></iframe>
