Attempted to fix video positioning

--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -3,6 +3,25 @@ title: "2024 May"
 last_modified_at: 2024-06-02
 ---
 
+<style>
+  .video-container {
+    position: relative;
+    padding-bottom: 0%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+  }
+
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
+
 Hello! This is my first monthly status update. I'm not very good at writing regularly, so I hope it won't also be my last.
 
 The goal of these posts will be to talk about what I've been up to each month, mostly for my own benefit (it's good to have something to reference to see what I've accomplished, failed to accomplish, or have gotten side-tracked from).
