--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -75,7 +75,9 @@ Finally, I've been working with the Bihar branch of [Digital Green](https://digi
 
 To end the month, I got to attend the ITU AI for Good Global Conference, hosted by the UN in Geneva. 
 
-<iframe width="420" height="315" src="https://player.vimeo.com/video/953332133" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+  <iframe src="https://player.vimeo.com/video/953332133" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
 *Of course Boston Dynamics was there.*
 
 <iframe width="420" height="315" src="https://player.vimeo.com/video/953332148" frameborder="0" allowfullscreen></iframe>
