Hopefully last video formatting attempt

--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -3,6 +3,25 @@ title: "2024 May"
 last_modified_at: 2024-06-02
 ---
 
+<style>
+  .responsive-video {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+  }
+
+  .responsive-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
+
 Hello! This is my first monthly status update. I'm not very good at writing regularly, so I hope it won't also be my last.
 
 The goal of these posts will be to talk about what I've been up to each month, mostly for my own benefit (it's good to have something to reference to see what I've accomplished, failed to accomplish, or have gotten side-tracked from).
@@ -56,34 +75,14 @@ Finally, I've been working with the Bihar branch of [Digital Green](https://digi
 
 To end the month, I got to attend the ITU AI for Good Global Conference, hosted by the UN in Geneva. 
 
-<style>
-  .responsive-video {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    background: #000;
-  }
-
-  .responsive-video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
-
 <div class="responsive-video">
   <iframe src="https://player.vimeo.com/video/953332133" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
-
-
-<iframe width="420" height="315" src="https://player.vimeo.com/video/953332133" frameborder="0" allowfullscreen></iframe>
 *Of course Boston Dynamics was there.*
 
-<iframe width="420" height="315" src="https://player.vimeo.com/video/953332148" frameborder="0" allowfullscreen></iframe>
+<div class="responsive-video">
+  <iframe src="https://player.vimeo.com/video/953332148" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
 *The more flashy side of the conference. I'm pretty sure this doesn't have any relationship to achieving SDGs, but it looks cool. (Credit to [The Robot Studio](https://www.therobotstudio.com/))*
 
 A pretty neat experience, once you wade through the more flashy and buzz-wordy ground floor (and like, hundreds of pictures of the thinking robot head thing that seems to have become the stock image for "AI"). Geoffrey Hinton spoke, as did Sam Altman. I definitely preferred sitting in on the technical workshops on the top floor though. The opportunity to ask questions to and get ideas from some of the top scientists in the world leading efforts to implement AI for good was definitely worth the trip! (I even managed to impress a few scientists with the questions I asked.)
@@ -133,7 +132,9 @@ I'm also learning Mandarin! As an old person, spaced repetition is pretty much w
 
 I kicked off the month with the uniquely-Oxford May Day celebrations: staying up all night and heading over to heard the Magdalen Choir sing from the top of the tower at 6AM. I missed this last year since I was back in Canada, and was glad I got to experience it. Very weird experience staying up all night with an entire town!
 
-<iframe width="420" height="315" src="https://player.vimeo.com/video/953332160" frameborder="0" allowfullscreen></iframe>
+<div class="responsive-video">
+  <iframe src="https://player.vimeo.com/video/953332160" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
 *You can't see the choir but I'm sure they're up there somewhere.*
 
 Spring is here and quite beautiful in Oxford and especially the Botanic Gardens. 
