--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -42,7 +42,7 @@ So I wanted to take a year off and cross some things off that list. For now, I h
 
 # Overall Goals
 
-As might be obvious from the above paragraph, my high-level goal is to have the largest possible positive impact with my life. I think I'm willing to make fairly large sacrifices to my income in order to be able to do that. On a given year, I typically donate at least 10\% of my income to high-impact non-profits (something [everyone should consider doing!](https://www.givingwhatwecan.org/pledge?gad_source=1&gclid=CjwKCAjwjeuyBhBuEiwAJ3vuoWKZn3GqnsqBRA5RoO60BV7yORYOfnXUD0-A4t5aSklkaq7sUVZ7_hoCiEcQAvD_BwE)).
+As might be obvious from the above paragraph, my high-level goal is to have the largest possible positive impact with my life. I think I'm willing to make fairly large sacrifices to my income in order to be able to do that. On a given year, I typically donate at least 10% of my income to high-impact non-profits (something [everyone should consider doing!](https://www.givingwhatwecan.org/pledge?gad_source=1&gclid=CjwKCAjwjeuyBhBuEiwAJ3vuoWKZn3GqnsqBRA5RoO60BV7yORYOfnXUD0-A4t5aSklkaq7sUVZ7_hoCiEcQAvD_BwE)).
 
 On a more specific level, I'm interested in what I call "[algorithmic governance](https://en.wikipedia.org/wiki/Government_by_algorithm)". That is, the usage of computer algorithms applied to policy decisions. With the current buzz around AI (both the hype and actual advancements), governments will increasingly defer to algorithmic processes to automate and improve decision-making. If done correctly, this has the potential to make everyone better off through more responsive, evidence-based, and unbiased policies and programming. If done incorrectly, the opposite may come to pass.
 
