--- a/_updates/2024-05-31-may.md
+++ b/_updates/2024-05-31-may.md
@@ -71,7 +71,7 @@ I've also been working on a [neural network-based housing price simulator](https
 ![no-alignment]({{ '/assets/images/updates/2024-may/housingnet.png' | absolute_url }})
 *My untested hypothesis is that there is a positive correlation between giving a model a cute name and its probability of being used.*
 
-Finally, I've been working with the Bihar branch of [Digital Green](https://digitalgreen.org/) to do some follow-up work for a machine learning-based [precision agriculture model](https://jess-rapson.com/prediction/2023/12/10/digital-green-agriculture.html) my team developed in December. Basically, we our model detected a pretty strong relationship between root-based (as opposed to broadcasting) organic fertiliser application and higher crop yields. I did some quasi-experimental analysis (propensity score matching) to confirm this relationship had a causal basis using 2022 data supplied by Digital Green. Now, my team is actively working with Digital Green and the [Bihar Rural Livelihoods Promotion Society](https://brlps.in/) to verify this relationship on 2023 data. Once that's done, I'm hoping to get a publication out of it and hopefully enable these organisations to give recommendations to subsistence farmers that can increase their crop yields!
+Finally, I've been working with the Bihar branch of [Digital Green](https://digitalgreen.org/) to do some follow-up work for a machine learning-based [precision agriculture model](https://jess-rapson.com/prediction/2023/12/10/digital-green-agriculture.html) my team developed in December. Basically, our model detected a pretty strong relationship between root-based (as opposed to broadcasting) organic fertiliser application and higher crop yields. I did some quasi-experimental analysis (propensity score matching) to confirm this relationship had a causal basis using 2022 data supplied by Digital Green. Now, my team is actively working with Digital Green and the [Bihar Rural Livelihoods Promotion Society](https://brlps.in/) to verify this relationship on 2023 data. Once that's done, I'm hoping to get a publication out of it and hopefully enable these organisations to give recommendations to subsistence farmers that can increase their crop yields!
 
 To end the month, I got to attend the ITU AI for Good Global Conference, hosted by the UN in Geneva. 
 
