Worked on June update

--- a/_updates/2024-06-29-june.md
+++ b/_updates/2024-06-29-june.md
@@ -22,8 +22,17 @@ last_modified_at: 2024-06-29
   }
 </style>
 
-I'm back for month two. 
+I'm back for month two! 
 
+# On Censorship and Gaza
+
+# Main Quest
+
+# Thing I've Done
+
+# Thoughts on G7 Puglia
+
+# Travel, Life, and Other Stuff
 
 
 <div class="responsive-video">
@@ -35,4 +44,3 @@ I'm back for month two.
 *Text.*
 
 
-# Title
