--- a/_updates/2024-06-29-june.md
+++ b/_updates/2024-06-29-june.md
@@ -30,6 +30,8 @@ I'm back for month two!
 
 # Thing I've Done
 
+![GIF Title](https://media.giphy.com/media/STWeGOKvTysVq4GatY/giphy.gif)
+
 # Thoughts on G7 Puglia
 
 # Travel, Life, and Other Stuff
