Compressed big images

--- a/_updates/2024-06-29-june.md
+++ b/_updates/2024-06-29-june.md
@@ -95,7 +95,8 @@ After returning from Italy, I finished up some of the projects I was working on 
 I also gained a new project. Following my invitation to and attendance of an emergency flood forecasting workshop at the University of Reading, where myself and a bunch of climate scientists brainstormed new ways to better forecast flooding in the White Nile river basin in South Sudan, I completed a preliminary model using a ConvLSTM (convolutional long short-term memory) network to leverage spatio-temporal structures of past flood inundation data. Basically, the model uses the historical flood patterns, pictured below, and essentially predicts where the water will go next, using the preceding flooding patterns.
 
 ![GIF Title](https://media.giphy.com/media/STWeGOKvTysVq4GatY/giphy.gif)
-*It's very beautiful to watch the pulsing flow of the Nile, breathing and pulsing as if it were a living organism.*
+
+*It's very beautiful to watch the flow patterns of the Nile, breathing and pulsing as if it were a living organism.*
 
 The floods in South Sudan are of particular concern due to the extreme vulnerability of the populations living alongside the river and the extreme flood extents produced by the White Nile. Large portions of the country, including the Bentiu refugee camp, have experienced flooding for several years as unprecedented flooding in 2021 engulfed the camp and surrounding areas and never fully receded. Being able to predict the patterns of these floods in the future has the potential to improve major decisions on settlements, aid distribution, and evacuation procedures.
 
