--- a/_updates/2024-06-29-june.md
+++ b/_updates/2024-06-29-june.md
@@ -30,11 +30,11 @@ For several years, I've been posting data visualisations on Reddit. Nothing spec
 
 So given the current discourse around the war in Gaza, especially conflicting media comments on whether the civilian death toll is "typical" for similarly positioned conflicts, I decided to post a quick and simple visualisation comparing civilian deaths in the 2023 Gaza Strip invasion to other military invasions in the 21st century. Now, this topic is clearly littered with political landmines. But I figured that a simple visualisation that says nothing about moral justifications, land ownership, or the normative existence of  states would be (mostly) free from such pitfalls and instead might provide some useful information to colloquial understanding of the conflict. After all, I was able to make successful data visualisation posts about nuclear energy and developed country CO2 emissions, both controversial topics, in the past. Boy was I wrong. 
 
-I'll likely dive into the specifics of the data that I looked at in a dedicated post, but the gist of it is that I took a complete list of all 21st century invasions from Wikipedia (as cherry-picking conflicts obviously could inject bias) and compared the number of civilians deaths in the invaded region including: total number of civilian deaths, ratio of civilian deaths to militant deaths, number of civilian deaths per capita, number of civilian deaths per month, and number of civilian deaths per month per capita. I used the most cited source for every conflict cited on Wikipedia (typically the United Nations, Amnesty International, or similarly reputable international organisations) *except* for all of the 21st century Gaza invasion. For these, I very conservatively used the estimates provided by Israel. This was done for several reasons. Most obviously, the figures provided by the HAMAS run Gaza Ministry of Health are obviously contentious and are especially unlikely to be believed by people who feel the Gaza invasion is justified (thus rendering the entire data discountable). Secondly, the Gaza Health Ministry figures do not distinguish between civilian and military deaths. Since the point of the visualisation was to focus on civilian deaths, this was clearly not acceptable. Thus, the data in the figure comes from the Israeli Defence Force (for the 2004 invasion of Gaza), the Israeli Ministry of Foreign Affairs (for the 2009 invasion of Gaza), and the Israeli Prime Minister (for the 2023 invasion of Gaza).
+I'll likely dive into the specifics of the data that I looked at in a dedicated post, but the gist of it is that I took a complete list of all 21st century invasions from Wikipedia (as cherry-picking conflicts obviously could inject bias) and compared the number of civilians deaths in the invaded region including: total number of civilian deaths, ratio of civilian deaths to militant deaths, number of civilian deaths per capita, number of civilian deaths per month, and number of civilian deaths per month per capita. I used the most cited source for every conflict cited on Wikipedia (typically the United Nations, Amnesty International, or similarly reputable international organisations) *except* for all of the 21st century Gaza invasion. For these, I very conservatively used the estimates provided by Israel. This was done for several reasons. Most obviously, the figures provided by the HAMAS run Gaza Ministry of Health are contentious and are especially unlikely to be believed by people who feel the Gaza invasion is justified (thus rendering the entire data discountable). Secondly, the Gaza Health Ministry figures do not distinguish between civilian and military deaths. Since the point of the visualisation was to focus on civilian deaths, this was clearly not acceptable. Thus, the data in the figure comes from the Israeli Defence Force (for the 2004 invasion of Gaza), the Israeli Ministry of Foreign Affairs (for the 2009 invasion of Gaza), and the Israeli Prime Minister (for the 2023 invasion of Gaza).
 
 Surprisingly, the [estimates provided by Netanyahu](https://www.cbsnews.com/news/israel-hamas-war-gaza-death-toll-netanyahu-un-civilians-women-children/) don't actually differ that much from those provided by the Gaza Health Ministry. At the time of data collection, the Gaza Health Ministry was claiming roughly 35,000 total deaths (not distinguishing between civilians and militants) while Netanyahu claimed about 30,000 deaths of which 16,000 were civilians. It is worth noting that Netanyahu provided these estimates prior to the late May Rafah invasion and the June hostage rescue which resulted in additional civilian deaths. Regardless, this conservative estimate should be impervious to complaints that is comes from unreliable sources like HAMAS.
 
-Numbers for the reference population (used to calculate civilian deaths per capita) is based on the population in the specific region that was invaded, not the population of the entire country. So for example, the reference population for the 2014 invasion of Ukraine was just the Donbas region, while the reference population for the 2022 invasion of Ukraine was only Southern and Eastern Ukraine. This has the effect of making the per capita civilian deaths *higher* than they would be if the entire country's population was used as a reference. This helps to better measure the civilian death toll in the region that was actually under attack, making the numbers more comparable to Gaza. A more biased graph might use the entire country's population as a reference for these invasions, thus inflating the per capita civilian death toll in Gaza by comparison.
+Numbers for the reference population (used to calculate civilian deaths per capita) are based on the population in the specific region that was invaded, not the population of the entire country. So for example, the reference population for the 2014 invasion of Ukraine was just the Donbas region, while the reference population for the 2022 invasion of Ukraine was only Southern and Eastern Ukraine. This has the effect of making the per capita civilian deaths *higher* than they would be if the entire country's population was used as a reference. This helps to better measure the civilian death toll in the region that was actually under attack, making the numbers more comparable to Gaza. A more biased graph might use the entire country's population as a reference for these invasions, thus inflating the per capita civilian death toll in Gaza by comparison.
 
 The methodology certainly isn't anything fancy, but I think that outlining methodology prior to looking at the results (in this case, using a precompiled list of invasions and having an automatic method for choosing the source of the civilian death estimates) means that little bias is injected to the process. I could easily see someone who is motivated to portray the civilian death toll in a certain way cherry-picking conflicts and sources of civilian deaths to suit their pre-selected narrative.
 
@@ -112,7 +112,7 @@ This was particularly salient when comparing the actions taken against Russia to
 
 Another issue that got to me was the announcement of new EU tariffs on Chinese-imported electric vehicles. China has been subsidising their domestic electric vehicle industry for a few years, mainly to help boost production and make EVs competitive with ICEs (completely unrelated, China is one of the few exporters of lithium, an industry that would benefit heavily from global EV adoption). Trade incentives aside, the result of this policy is cheaper EVs and faster EV adoption, leading to a quicker transition away from CO2 emitting ICEs. By choosing to push out cheaper Chinese EVs at this time, the EU is clearly choosing protectionism over reducing emissions. Regardless of whether you think this is the correct move, the concious trade-off should be obvious.
 
-The leader of my research group, who had been criticising China's policies all week, praised Ontario's decision to subsidising its own EV industry (in his words, if China is doing it then "so should we"). Strangely he doesn't think the EU should place tariffs on Canadian EV exports... G7 leaders themselves also had the gaul to criticise China for not doing enough to reduce emissions in the Puglia Communique.
+The leader of my research group, who had been criticising China's policies all week, praised Ontario's decision to subsidise its own EV industry (in his words, if China is doing it then "so should we"). Strangely he doesn't think the EU should place tariffs on Canadian EV exports... G7 leaders themselves also had the gall to criticise China for not doing enough to reduce emissions in the Puglia Communique.
 
 I'm going to work a bit this month to try and quantify what the potential impact of these tariffs could be on European emissions, adding to the climate policy simulator my students were working on in May. Hopefully this can provide a better picture of what this trade-off costs in terms of emissions.
 
