--- a/_updates/2024-06-29-june.md
+++ b/_updates/2024-06-29-june.md
@@ -152,6 +152,6 @@ Back in Oxford, I took a stab a sewing a sleeve back onto a dress I purchased in
 ![no-alignment]({{ '/assets/images/updates/2024-june/tolkien-trees.png' | absolute_url }})
 *We found the alleged inspiration for Tolkien's Doors of Durin.*
 
-For reading, I've been listening to a few audio books while I do other things. I've completed Dracula and am currently listening to Babel (read by Chris Lew Kum Hoi, who is almost unbelievably good at reading the variety of languages and accents represented in the book).
+For reading, I've been listening to a few audio books while I do other things. I've completed Dracula and am currently listening to Babel (narrated by Chris Lew Kum Hoi, who is almost unbelievably good at reading the variety of languages and accents represented in the book).
 
 Overall, I'm pretty happy with my work this month, even if I haven't made any direct steps towards my main quest goals. I think scaling up the work I am currently doing will be quite difficult and will require me to have a large amount of connections, experience, and completed jobs under my belt so everything I'm doing now counts towards that, even if indirectly. 
