--- a/_updates/2024-07-31-july.md
+++ b/_updates/2024-07-31-july.md
@@ -52,7 +52,7 @@ I'm also working on another Zindi project, as a bit of a summer treat. The goal 
 ![no-alignment]({{ '/assets/images/updates/2024-july/no2-spatiotemporal.png' | absolute_url }})
 *When ordering the sensors by location (distance from the PD01 sensor, as an example), it is clear that there are spatio-temporal relationships in NO2 levels.*
 
-![no-alignment]({{ '/assets/images/updates/2024-july/no2-interpolation.png | absolute_url }})
+![no-alignment]({{ '/assets/images/updates/2024-july/no2-interpolation.png' | absolute_url }})
 *Since the sensors only provide point-wise data, I need to first convert their values to an interpolated raster grid, which I've done here using a radial basis function with a linear kernel. This will be the input to the network.*
 
 These projects (and their excessive technical details) have consumed a large chunk of my time. I believe this is time well-spent, as I am building quite a substantial portfolio of impactful projects. The Nile project in particular I am most optimistic about, as everyone involved is very keen to use the results in a tangible manner to improve decision-making.
